# tui_backup

./: .gitignore  Cargo.toml  config.json
src/: app.rs  app_mode.rs  create_scheduler.rs  create_scheduler_popup.rs  create_template.rs  create_template_popup.rs  error_popup.rs  file_filter_form_popup.rs  file_folder_priority_form_popup.rs  file_item_list_filter.rs  file_item_list_priority.rs  file_list.rs  file_list_filter.rs  file_list_priority.rs  file_list_priority_form_popup.rs  file_service.rs  file_system.rs  folder_filter_form_popup.rs  folder_priority_form_popup.rs  help_block.rs  help_popup.rs  main.rs  popup.rs  scheduler.rs  scheduler_list.rs  tab_c.rs  template.rs  template_list.rs  widget_gen.rs
src/application/: app.rs  app_event.rs  app_mode.rs  app_state.rs  app_ui.rs  event.rs  mod.rs  mode.rs  state.rs  ui.rs
src/components/: mod.rs
src/components/dir/: mod.rs
src/file_list_component/: mod.rs
src/generator/: input_generator.rs  list_generator.rs  mod.rs  popup.rs  table_generator.rs
src/helper_component/: helper_ui.rs  mod.rs
src/models/: config.rs  dir_entry.rs  entry_dir_file_priority.rs  entry_dir_filter.rs  entry_dir_priority.rs  entry_file_filter.rs  entry_file_priority.rs  mod.rs  scheduler.rs
src/services/: entry_filter_service.rs  entry_priority_service.rs  file_service.rs  file_system_service.rs  map_dir_entry_service.rs  map_template_service.rs  mod.rs  task_service.rs
src/tab_component/: mod.rs  tab_component.rs  tab_event.rs  tab_ui.rs
src/utils/: list_utils.rs  mod.rs  tab_util.rs  table_util.rs  validator.rs
(+174 files in other folders)
