[package]
name = "tui_backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19.0"
crossterm = "0.25.0"
regex = "1.10.2"
rayon="1.8"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
